# Vault-Agent-Memory

./: .compiler_state.json  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROGRESS.md  README.md  README.zh-CN.md  README.zh-Hant.md  SCHEMA.md  SETUP.md  agent_manifest.json  docs-zh-sync-report.md  guardrails.db-shm  guardrails.db-wal  index.html  pyproject.toml  trust_report.json
.github/: CLAUDE.md  PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  agentmemory_compare.py  external_memory_compare.py  external_memory_retrieval.py  memory_foundation_compare.py  search_benchmark.py  vault_fixture_run.py
docs/: agent_first_usage.md  agent_install.md  agent_integrations.md  agent_memory_qa_roadmap.md  agent_onboarding_benchmark.md  automation.md  cli_reference.md  contributing_good_first_issues.md  core-concepts.md  db_backup_restore.md  db_migrations.md  deployment_modes.md  developer_multi_agent_memory_guide.zh-Hant.md  document_map_citation_policy.md  document_map_upgrade_plan.md  dream_workflow.md  external_memory_benchmarks.md  gateway_security.md  guardrails_dream_cron_manifest.md  guardrails_dream_librarian_system_plan.md  gui_console.md  llm_integration.md  mcp_memory_workflow.md  mcp_tool_reference.md  memory_foundation_benchmarks.md  memory_governance.md  memory_system_comparison.md  okf_integration.md  optimization_plan_v2.md  phase_b_internal_knowledge_capability_plan.md  privacy_regression_fixtures.md  privacy_scanner_design.md  project_memory_proofs.md  quickstart.md  readme_claim_matrix.md  release_checklist_0_4_1.md  release_hygiene_trusted_publishing_design.md  release_stabilization.md  repo_rename_migration.md  search_qa_benchmarking.md  (+6 more)
guardrails_lite/: __init__.py  b7_report.py  dashboard_aggregate.py  dream_dedupe.py  dream_promote.py  dream_queue.py  dream_report.py  (+14 more)
(+434 files in other folders)
