[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-for-llm"
version = "0.8.0"
description = "Local-first memory governance for AI agents: shared, reviewable, auditable memory via SQLite and MCP."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Vault Agent Memory Contributors"},
]
keywords = ["agent-memory", "memory-governance", "mcp", "multi-agent", "sqlite", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6,<1.0",
]

[project.urls]
Homepage = "https://zycaskevin.github.io/Vault-Agent-Memory/"
Repository = "https://github.com/zycaskevin/Vault-Agent-Memory"
Issues = "https://github.com/zycaskevin/Vault-Agent-Memory/issues"

[project.optional-dependencies]
semantic = [
    "onnxruntime>=1.16,<2.0",
    "optimum[onnxruntime]>=2.0,<3.0",
    "transformers>=4.35,<5.0",
    "sentencepiece>=0.1",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
mcp = [
    "mcp>=1.0",
    "anthropic>=0.30,<1.0",
]
supabase = [
    "supabase>=2.0,<3.0",
]

[project.scripts]
vault = "vault.cli:main"
vault-mcp = "vault.mcp:main"

[tool.setuptools.packages.find]
include = ["vault*", "scripts*"]

[tool.setuptools.package-data]
vault = ["assets/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
